# miscc4c

./: .gitignore  LICENSE  README.md  miscc4c  pyproject.toml
public_data/pdb/: HQL.cif
src/miscc4c/: assign_bond_order.py  cli.py  download_cif.py  download_pdb.py
tests/: test_assign_bond_order.py  test_cli.py  test_download_cif.py  test_download_pdb.py
